Added support for listing organization service classes from ptv
