# kunta-api-server/src/main/java/fi/otavanopisto/kuntaapi/server/integrations/ptv/PtvServiceClassProvider.java
@@ -2,8 +2,9 @@ package fi.otavanopisto.kuntaapi.server.integrations.ptv;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
-import java.util.Locale;
+import java.util.Set;
 import java.util.TreeSet;
 import java.util.logging.Logger;
 
@@ -11,18 +12,17 @@ import javax.enterprise.context.Dependent;
 import javax.inject.Inject;
 
 import fi.otavanopisto.kuntaapi.server.controllers.OrganizationController;
-import fi.otavanopisto.kuntaapi.server.integrations.ServiceProvider;
+import fi.otavanopisto.kuntaapi.server.integrations.ServiceClassProvider;
 import fi.otavanopisto.kuntaapi.server.persistence.model.OrganizationIdentifier;
-import fi.otavanopisto.kuntaapi.server.rest.model.LocalizedValue;
-import fi.otavanopisto.kuntaapi.server.rest.model.Service;
+import fi.otavanopisto.kuntaapi.server.rest.model.ServiceClass;
 import fi.otavanopisto.ptv.client.ApiResponse;
 import fi.otavanopisto.ptv.client.model.IVmOpenApiService;
-import fi.otavanopisto.ptv.client.model.VmOpenApiLocalizedListItem;
+import fi.otavanopisto.ptv.client.model.VmOpenApiFintoItem;
 import fi.otavanopisto.ptv.client.model.VmOpenApiOrganization;
 import fi.otavanopisto.ptv.client.model.VmOpenApiOrganizationService;
 
 @Dependent
-public class PtvServiceProvider implements ServiceProvider {
+public class PtvServiceClassProvider implements ServiceClassProvider {
 
   @Inject
   private Logger logger;
@@ -34,7 +34,7 @@ public class PtvServiceProvider implements ServiceProvider {
   private OrganizationController organizationController;
 
   @Override
-  public List<Service> listOrganizationServices(Locale locale, String organizationId) {
+  public List<ServiceClass> listOrganizationServiceClasses(String organizationId) {
     OrganizationIdentifier organizationIdentifier = organizationController.findOrganizationIdentifierBySourceAndUuid(PtvConsts.SOURCE, organizationId);
     if (organizationIdentifier == null) {
       logger.warning(String.format("Could not find ptv organization for organizationId %s", organizationId));
@@ -72,49 +72,31 @@ public class PtvServiceProvider implements ServiceProvider {
       }
     }
     
-    return transform(locale, ptvServices);
-  }
-
-  private List<Service> transform(Locale locale, List<IVmOpenApiService> ptvServices) {
-    List<Service> result = new ArrayList<>(ptvServices.size());
-    
-    // Name types: Name, AlternateName
-    // Description types: ShortDescription, ChargeDescription, ServiceUserInstruction, Description
-    
+    List<VmOpenApiFintoItem> ptvServiceClasses = new ArrayList<>();
+    Set<String> ptvServiceClassIds = new HashSet<>();
     for (IVmOpenApiService ptvService : ptvServices) {
-      Service service = new Service();
-      // TODO: Incorrect id
-      
-      service.setId(ptvService.getId());
-      service.setName(getLocalizedValue("Name", ptvService.getServiceNames()));
-      service.setDescription(getLocalizedValue("ShortDescription", ptvService.getServiceDescriptions()));
-      result.add(service);
+      for (VmOpenApiFintoItem ptvServiceClass : ptvService.getServiceClasses()) {
+        if (!ptvServiceClassIds.contains(ptvServiceClass.getId())) {
+          ptvServiceClassIds.add(ptvServiceClass.getId());
+          ptvServiceClasses.add(ptvServiceClass);
+        }
+      }
+    }
+    
+    List<ServiceClass> result = new ArrayList<>(ptvServiceClasses.size());
+    for (VmOpenApiFintoItem ptvServiceClass : ptvServiceClasses) {
+      // TODO: Incorrect ids 
+      ServiceClass serviceClass = new ServiceClass();
+      serviceClass.setCode(ptvServiceClass.getCode());
+      serviceClass.setName(ptvServiceClass.getName());
+      serviceClass.setOntologyType(ptvServiceClass.getOntologyType());
+      serviceClass.setParentId(ptvServiceClass.getParentId());
+      serviceClass.setParentUri(ptvServiceClass.getParentUri());
+      serviceClass.setUri(ptvServiceClass.getUri());
+      result.add(serviceClass);
     }
     
     return result;
-  }
-  
-  private LocalizedValue getLocalizedValue(String type, List<VmOpenApiLocalizedListItem> items) {
-    if (items != null && !items.isEmpty()) {
-      LocalizedValue result = new LocalizedValue();
-      List<VmOpenApiLocalizedListItem> typeItems = new ArrayList<>();
-      
-      for (VmOpenApiLocalizedListItem item : items) {
-        if (type.equals(item.getType())) {
-          typeItems.add(item);
-        }
-      }
-      
-      if (!typeItems.isEmpty()) {
-        for (VmOpenApiLocalizedListItem item : typeItems) {
-          result.put(item.getLanguage(), item.getValue());
-        }
-      
-        return result;
-      }
-    }
-    
-    return null;
   }
   
 }
